# travel-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: travel_agent.ipynb
notebooks/eval/adv/: test.ipynb
notebooks/eval/basic/: langfuse.ipynb  main.ipynb
notebooks/tools/: car_rental_tools.py  flight_tools.py  hotel_tools.py  main.ipynb
notebooks/travel-planner/: travel_agent copy.ipynb  travel_agent.ipynb
notebooks/travel-planner/tools/: car_rental_tools.py  flight_tools.py  hotel_tools.py  taxi_tools.py  trip_recommendations.py
src/: download_db.py  streamlit_app.py
src/agents/: agents.py  llama_guard.py  multi_agent_travel_planner.py  order_assistant.py  order_assistant_new.py  rag_assistant.py  research_assistant.py  supervisor_travel.py  test.ipynb  tools.py  travel_agent_support.py  travel_agents.py  travel_planner.py
src/agents/tools/: car_rental_tools.py  error_handling.py  flight_tools.py  hotel_tools.py  taxi_tools.py  trip_recommendations.py
src/client/: client.py
src/core/: llm.py  settings.py
src/data_products/: customer_360.py  deals_360.py  inventory_360.py  lens_utils.py  product_360.py  proposals_360.py  reorder_360.py  test_customer_360.py
src/memory/: postgres.py
src/schema/: models.py  schema.py
src/service/: service.py
